# boldfish

./: .env  LICENSE  README.html  README.md  pyproject.toml
app/: bionic_reading_revise.py  boldfish.py  check_manually_entered_entities.py  cli.py  configure_logger.py  constants.py  create_deck_of_flashcards.py  get_deck_name.py  get_entities.py  get_output_directory.py  loading_animation.py  log_entities.py  main.py  manually_validate_definitions.py  openai_answer.py  validate_deck_name.py  validate_path.py
data/: BrilliantAnkiDeckName.apkg  BrilliantAnkiDeckName.csv  test.csv  test.json
tests/: test_check_manually_entered_entities.py  test_validate_deck_name.py
