[tool.poetry]
name = "boldfish"
version = "0.1.0"
description = "Use large language model (LLM) and Bionic Reading to enhance the creation of Anki flashcards"
authors = ["ozieblo <ozieblo.michal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
openai = "^0.27.8"
pathlib = "^1.0.1"
genanki = "^0.13.0"
bs4 = "^0.0.1"
poetry-plugin-dotenv = "^0.5.2"
poetry-dotenv-plugin = "^0.2.0"
black = "^23.7.0"
isort = "^5.12.0"
pylama = "^8.4.1"
mypy = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "pylama"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
